kubernetes/nginx-test/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-test-n
  labels:
    app.kubernetes.io/name: nginx-ingress
spec:
  rules:
  - host: nginx-test.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-test-service
            port: 
              number: 80
